Implement missing Alpaca endpoints for Oct 2025 coverage
